; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/input/mouse/extr_synaptics_i2c.c_synaptics_i2c_config.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/input/mouse/extr_synaptics_i2c.c_synaptics_i2c_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.i2c_client = type { i32 }

@DEV_CONTROL_REG = common dso_local global i32 0, align 4
@polling_req = common dso_local global i64 0, align 8
@INT_ENA_ABS_MSK = common dso_local global i32 0, align 4
@INT_ENA_REL_MSK = common dso_local global i32 0, align 4
@INTERRUPT_EN_REG = common dso_local global i32 0, align 4
@GENERAL_2D_CONTROL_REG = common dso_local global i32 0, align 4
@no_decel = common dso_local global i64 0, align 8
@NO_DECELERATION = common dso_local global i32 0, align 4
@reduce_report = common dso_local global i64 0, align 8
@REDUCE_REPORTING = common dso_local global i32 0, align 4
@no_filter = common dso_local global i64 0, align 8
@NO_FILTER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.i2c_client*)* @synaptics_i2c_config to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @synaptics_i2c_config(%struct.i2c_client* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.i2c_client*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.i2c_client* %0, %struct.i2c_client** %3, align 8
  %7 = load %struct.i2c_client*, %struct.i2c_client** %3, align 8
  %8 = load i32, i32* @DEV_CONTROL_REG, align 4
  %9 = call i32 @synaptics_i2c_reg_set(%struct.i2c_client* %7, i32 %8, i32 193)
  store i32 %9, i32* %4, align 4
  %10 = load i32, i32* %4, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %1
  %13 = load i32, i32* %4, align 4
  store i32 %13, i32* %2, align 4
  br label %75

14:                                               ; preds = %1
  %15 = load i64, i64* @polling_req, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %18

17:                                               ; preds = %14
  br label %22

18:                                               ; preds = %14
  %19 = load i32, i32* @INT_ENA_ABS_MSK, align 4
  %20 = load i32, i32* @INT_ENA_REL_MSK, align 4
  %21 = or i32 %19, %20
  br label %22

22:                                               ; preds = %18, %17
  %23 = phi i32 [ 0, %17 ], [ %21, %18 ]
  store i32 %23, i32* %6, align 4
  %24 = load %struct.i2c_client*, %struct.i2c_client** %3, align 8
  %25 = load i32, i32* @INTERRUPT_EN_REG, align 4
  %26 = load i32, i32* %6, align 4
  %27 = call i32 @synaptics_i2c_reg_set(%struct.i2c_client* %24, i32 %25, i32 %26)
  store i32 %27, i32* %4, align 4
  %28 = load i32, i32* %4, align 4
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %30, label %32

30:                                               ; preds = %22
  %31 = load i32, i32* %4, align 4
  store i32 %31, i32* %2, align 4
  br label %75

32:                                               ; preds = %22
  %33 = load %struct.i2c_client*, %struct.i2c_client** %3, align 8
  %34 = load i32, i32* @GENERAL_2D_CONTROL_REG, align 4
  %35 = call i32 @synaptics_i2c_reg_get(%struct.i2c_client* %33, i32 %34)
  store i32 %35, i32* %5, align 4
  %36 = load i64, i64* @no_decel, align 8
  %37 = icmp ne i64 %36, 0
  br i1 %37, label %38, label %41

38:                                               ; preds = %32
  %39 = load i32, i32* @NO_DECELERATION, align 4
  %40 = shl i32 1, %39
  br label %42

41:                                               ; preds = %32
  br label %42

42:                                               ; preds = %41, %38
  %43 = phi i32 [ %40, %38 ], [ 0, %41 ]
  %44 = load i32, i32* %5, align 4
  %45 = or i32 %44, %43
  store i32 %45, i32* %5, align 4
  %46 = load i64, i64* @reduce_report, align 8
  %47 = icmp ne i64 %46, 0
  br i1 %47, label %48, label %51

48:                                               ; preds = %42
  %49 = load i32, i32* @REDUCE_REPORTING, align 4
  %50 = shl i32 1, %49
  br label %52

51:                                               ; preds = %42
  br label %52

52:                                               ; preds = %51, %48
  %53 = phi i32 [ %50, %48 ], [ 0, %51 ]
  %54 = load i32, i32* %5, align 4
  %55 = or i32 %54, %53
  store i32 %55, i32* %5, align 4
  %56 = load i64, i64* @no_filter, align 8
  %57 = icmp ne i64 %56, 0
  br i1 %57, label %58, label %61

58:                                               ; preds = %52
  %59 = load i32, i32* @NO_FILTER, align 4
  %60 = shl i32 1, %59
  br label %62

61:                                               ; preds = %52
  br label %62

62:                                               ; preds = %61, %58
  %63 = phi i32 [ %60, %58 ], [ 0, %61 ]
  %64 = load i32, i32* %5, align 4
  %65 = or i32 %64, %63
  store i32 %65, i32* %5, align 4
  %66 = load %struct.i2c_client*, %struct.i2c_client** %3, align 8
  %67 = load i32, i32* @GENERAL_2D_CONTROL_REG, align 4
  %68 = load i32, i32* %5, align 4
  %69 = call i32 @synaptics_i2c_reg_set(%struct.i2c_client* %66, i32 %67, i32 %68)
  store i32 %69, i32* %4, align 4
  %70 = load i32, i32* %4, align 4
  %71 = icmp ne i32 %70, 0
  br i1 %71, label %72, label %74

72:                                               ; preds = %62
  %73 = load i32, i32* %4, align 4
  store i32 %73, i32* %2, align 4
  br label %75

74:                                               ; preds = %62
  store i32 0, i32* %2, align 4
  br label %75

75:                                               ; preds = %74, %72, %30, %12
  %76 = load i32, i32* %2, align 4
  ret i32 %76
}

declare dso_local i32 @synaptics_i2c_reg_set(%struct.i2c_client*, i32, i32) #1

declare dso_local i32 @synaptics_i2c_reg_get(%struct.i2c_client*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
